morgan-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: morgan-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: morgan-nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: morgan-nginx
    spec:
      containers:
      - image: nginx:latest
        name: morgan-deployment
        ports:
        - containerPort: 8080
