morgan-service.yml
apiVersion: v1
kind: Service
metadata:
  name: morgan-svc
  namespace: default
spec:
  type: NodePort
  selector:
    app: morgan-nginx
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 30080
