morgan-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: morgan-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
  - host: morgan.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: morgan-svc
            port:
              number: 80
